# hexy_engine

./: .gitignore  .gitmodules  CMakeLists.txt
include/: test.h
src/: CMakeLists.txt
src/Editor/: CMakeLists.txt  entry.cpp
src/Runtime/: CMakeLists.txt  main.cpp  test.cpp
src/Runtime/Core/: ShaderManager.cpp  ShaderManager.hpp
src/Runtime/Core/Components/: ComponentBase.hpp  ComponentManager.cpp  ComponentManager.hpp  SceneComponent.cpp  SceneComponent.hpp
src/Runtime/Core/Components/Meshes/: StaticMeshComponent.cpp  StaticMeshComponent.hpp
src/Runtime/Core/Datatypes/: Transform.cpp  Transform.hpp
src/Runtime/Core/Engine/: EngineManager.cpp  EngineManager.hpp
src/Runtime/Core/Entities/: Object.hpp  ObjectBase.hpp  Test.hpp
src/Runtime/Core/ObjectLoader/: ObjectLoader.cpp  ObjectLoader.hpp
src/Runtime/Core/ObjectParser/: ObjectParser.cpp  ObjectParser.hpp
src/Runtime/Core/Rendering/: IRenderer.hpp  RenderManager.cpp  RenderManager.hpp  Renderer.hpp
src/Runtime/Core/Rendering/Shaders/: ShaderManager.cpp  ShaderManager.hpp
src/Runtime/Core/WindowManager/: WindowManager.cpp  WindowManager.hpp
src/Temp/: entry.cpp
src/Temp/WindowHandler/: ViewportCamera.cpp  ViewportCamera.hpp  WindowHandler.cpp  WindowHandler.hpp
src/hexy_executable/: CMakeLists.txt  entry.cpp
